@@ -1,15 +1,0 @@
-#!/usr/local/bin/ruby
-
-require 'gluon'
-
-# for ident(1)
-CVS_ID = '$Id$'
-
-install_dir = ARGV.shift or raise 'need for install path'
-setup = Gluon::Setup.new(install_dir)
-setup.update
-
-# Local Variables:
-# mode: Ruby
-# indent-tabs-mode: nil
-# End:
